# http-extra-rs

./: Cargo.toml
src/: add_bearer.rs  check_status.rs  collect_body.rs  from_json_response.rs  json.rs  lib.rs  to_json.rs  to_json_request.rs
src/from_json/: response.rs
src/json/: from_response.rs
